# BFP

./: .env  .gitignore  alembic.ini  celerybeat-schedule  pyproject.toml
src/: config.py  database.py  dependencies.py  exception.py  main.py
src/api/: __init__.py  auth.py  hotel.py  room.py
src/connectors/: redis_connector.py
src/migrations/: env.py
src/migrations/versions/: 2026_07_12_1314-7a0de1100378_add_hotel_table.py  2026_07_12_1315-ae6643a63894_add_room_table.py  2026_07_14_1237-a67e435ef345_add_user_table.py
src/model/: __init__.py  hotel.py  room.py  user.py
src/repositories/: base.py  hotel.py  room.py  user.py
src/schema/: hotel.py  room.py  user.py
src/service/: auth.py  base.py  hotel.py  room.py
src/task/: celery_app.py  tasks.py
src/utils/: db_manager.py
