[project]
name = "fap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.139.0",
    "fastapi-cache2>=0.2.2",
    "jinja2>=3.1.6",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "redis>=8.0.1",
    "ruff>=0.15.21",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[tool.ruff]
line-length = 120

[tool.pyright]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
